# pdf-util

./: .gitignore  LICENSE  README.md  build.ps1  main.py  main_window.ui  pyproject.toml  requirements.txt  windows.py
src/pdfutil/: __main__.py  windows.py
src/pdfutil/resources/ui/: main_window.ui
